# ControlSystemAdapter

./: .gitignore  .jenkinsfile  CMakeLists.txt
ProcessVariableAdapter/: CMakeLists.txt
ProcessVariableAdapter/cmake/: FindPROJECT_NAME.cmake.in  FindPROJECT_NAME.cmake.in~  PROJECT_NAME-config.in.in  PROJECT_NAME.CONFIG.in
ProcessVariableAdapter/doc/: AvoidingLatencies.txt  Doxyfile  WhyWeNeedFourBuffers.txt
ProcessVariableAdapter/doc/RequirementsDocument/: Makefile  ProcessVariableAdapterRequirements.tex  Readme.txt
ProcessVariableAdapter/examples/cosade/: IndependentControlCore.h  testIndependentControlCore.cpp
ProcessVariableAdapter/include/: ControlSystemAdapter.h  ControlSystemPVManager.h  ControlSystemSynchronizationUtility.h  DevicePVManager.h  DeviceSynchronizationUtility.h  PVManager.h  ProcessArray.h  ProcessScalar.h  ProcessVariable.h  ProcessVariableFactory.h  StubControlSystemAdapter.h  StubProcessArray.h  StubProcessVariable.h  StubProcessVariableFactory.h  SynchronizationDirection.h  ThreadSafeProcessVariable.h  TimeStamp.h
ProcessVariableAdapter/src/: ControlSystemPVManager.cc  DevicePVManager.cc  PVManager.cc  StubControlSystemAdapter.cc  StubProcessVariableFactory.cc
ProcessVariableAdapter/tests/include/: IndependentTestCore.h
ProcessVariableAdapter/tests/src/: fullStubTest.cpp  testDeviceSynchronizationUtility.cpp  testPVManager.cpp  testProcessArray.cpp  testReferenceTestCoreWithTread.cpp  testStubControlSystemAdapter.cpp  testStubProcessArray.cpp  testStubProcessVariable.cpp  testStubProcessVariableFactory.cpp  testTimeStamp.cpp
RequirementsDocument/: ControlSystemAdapterRequirements.tex  Makefile
cmake/: Doxyfile.in  PROJECT_NAMEConfig.cmake.in.in  add_dependency.cmake  create_cmake_config_files.cmake
cmake/Modules/: FindDOOCS.cmake
doc/: Doxyfile
doc/RequirementsDocument/: ControlSystemAdapterRequirements.tex
examples/cosade/: IndependentControlCore.h  Makefile  testIndependentControlCore.cpp
include/: ControlSystemPVManager.h  ControlSystemSynchronizationUtility.h  DevicePVManager.h  DeviceSynchronizationUtility.h  ManualTimeStampSource.h  PVManager.h  PVManagerDecl.h  ProcessArray.h  ProcessArrayAccessor.h  ProcessArrayImpl.h  ProcessScalar.h  ProcessScalarAccessor.h  ProcessScalarImpl.h  ProcessVariable.h  ProcessVariableAccessor.h  ProcessVariableDecl.h  ProcessVariableListener.h  SynchronizationDirection.h  TimeStamp.h  TimeStampSource.h
include/ChimeraTK/: ControlSystemAdapter.h  ControlSystemAdapterControlSystem.h  ControlSystemAdapterDevice.h  MappedImage.h
include/ChimeraTK/ControlSystemAdapter/: ApplicationBase.h  ApplicationFactory.h  BidirectionalProcessArray.h  ControlSystemPVManager.h  ControlSystemSynchronizationUtility.h  DevicePVManager.h  DeviceSynchronizationUtility.h  ManualTimeStampSource.h  MappedImage.h  PVManager.h  PVManagerDecl.h  PersistentDataStorage.h  ProcessArray.h  ProcessArrayAccessor.h  ProcessScalar.h  ProcessVariable.h  ProcessVariableAccessor.h  ProcessVariableDecl.h  ProcessVariableListener.h  StatusAccessorBase.h  StatusWithMessageReader.h  SynchronizationDirection.h  TimeStamp.h  TimeStampSource.h  TransferFutureDecorator.h  TypeChangingDecorator.h  UnidirectionalProcessArray.h  VersionNumber.h  VersionNumberSource.h
src/: ApplicationBase.cc  ApplicationFactory.cc  ControlSystemPVManager.cc  ControlSystemSynchronizationUtility.cc  DevicePVManager.cc  DeviceSynchronizationUtility.cc  PVManager.cc  PersistentDataStorage.cc  ProcessVariable.cc  TypeChangingDecorator.cc  UnidirectionalProcessArray.cc
tests/: changedType.persist  changedVectorSize.persist  decoratorTest.map  renamedVariable.persist
tests/include/: CountingProcessVariableListener.h  CountingTimeStampSource.h  IndependentTestCore.h
tests/include/ChimeraTK/ControlSystemAdapter/Testing/: CountingProcessVariableListener.h  CountingTimeStampSource.h  IndependentTestCore.h  ReferenceTestApplication.h  toType.h
tests/src/: fullStubTest.cpp  stresstest.cpp  testApplicationFactory.cc  testAsyncRead.cpp  testBidirectionalProcessArray.cpp  testControlSystemSynchronizationUtility.cpp  testDeviceSynchronizationUtility.cpp  testMappedImage.cc  testPVAccessors.cpp  testPVManager.cpp  testPerformance.cpp  testPersistentDataStorage.cc  testPersistentDataStorage.cpp  testPersistentDatatStorage.cc  testProcessArray.cpp  testProcessInt.cpp  testProcessScalar.cpp  testProcessVariable.cpp  testReferenceTestCoreWithTread.cpp  testTimeStamp.cpp  testTypeChangingDecorator.cpp  testUnidirectionalProcessArray.cpp  testUnidirectionalProcessArrayNoWaitForNewData.cpp  testUnified.cpp  testUnifiedTypeChangingDecorator.cpp  toDouble.h
